--- a/projekt/templates/base.html
+++ b/projekt/templates/base.html
@@ -17,6 +17,8 @@
       {% if current_user.is_authenticated %}
         <a href="{{ url_for('orders') }}">My Orders</a>
         <a href="{{ url_for('profile') }}">Profile</a>
+      <a href="{{ url_for('import_products') }}">Import ERP-File</a>
+    </form>
         <a href="{{ url_for('logout') }}">Logout</a>
       {% else %}
         <a href="{{ url_for('register') }}">Register</a>
