--- a/projekt/templates/base.html
+++ b/projekt/templates/base.html
@@ -17,8 +17,7 @@
       {% if current_user.is_authenticated %}
         <a href="{{ url_for('orders') }}">My Orders</a>
         <a href="{{ url_for('profile') }}">Profile</a>
-      <a href="{{ url_for('import_products') }}">Import ERP-File</a>
-    </form>
+        <a href="{{ url_for('admin_sync') }}" style="color: #FF8C00; font-weight: bold;">Sync ERP</a>
         <a href="{{ url_for('logout') }}">Logout</a>
       {% else %}
         <a href="{{ url_for('register') }}">Register</a>
