Improved s-11 single source of truth

--- a/projekt/templates/order_detail.html
+++ b/projekt/templates/order_detail.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
-  <h2>Order #{{ order.id }}</h2>
-  <p><strong>Created:</strong> {{ order.created_at }}</p>
-  <p><strong>Status:</strong> {{ order.status }}</p>
+  <h2>Order #{{ order.orderID }}</h2>
+  <p><strong>Created:</strong> {{ order.createdAt }}</p>
+  <p><strong>Status Code:</strong> {{ order.orderStatus_status }}</p>
+  
   <h3>Items</h3>
   <table>
-    <tr><th>Product</th><th>Qty</th><th>Unit Price</th><th>Subtotal</th></tr>
+    <tr><th>Product</th><th>Qty</th><th>Item Price</th></tr>
     {% for it in order.items %}
       <tr>
         <td>{{ it.product.name }}</td>
         <td>{{ it.quantity }}</td>
-        <td>{{ "%.2f"|format(it.unit_price) }}</td>
-        <td>{{ "%.2f"|format(it.unit_price * it.quantity) }}</td>
+        <td>{{ "%.2f"|format(it.itemAmount) }}</td>
       </tr>
     {% endfor %}
-    <tr><td colspan="2"></td><td><strong>Total</strong></td><td>{{ "%.2f"|format(order.total_price) }}</td></tr>
+    <tr><td colspan="1"></td><td><strong>Total</strong></td><td>{{ "%.2f"|format(order.orderAmount) }}</td></tr>
   </table>
 {% endblock %}
