--- a/projekt/templates/register.html
+++ b/projekt/templates/register.html
@@ -4,7 +4,10 @@
   <form method="post">
     <label>Name:<br/><input name="name" required/></label><br/><br/>
     <label>Email:<br/><input name="email" type="email" required/></label><br/><br/>
-    <label>Address:<br/><textarea name="address"></textarea></label><br/><br/>
+    <label>Street: <input name="street" required/></label><br/><br/>
+    <label>House Number: <input name="house_number" required/></label><br/><br/>
+    <label>Zip Code: <input name="zip_code" required/></label><br/><br/>
+    <label>City: <input name="city" required/></label><br/><br/>
     <label>Password:<br/><input name="password" type="password" required/></label><br/><br/>
     <button type="submit">Register</button>
   </form>
