--- a/projekt/templates/index.html
+++ b/projekt/templates/index.html
@@ -13,7 +13,7 @@
         <td>{{ p.description }}</td>
         <td>{{ "%.2f"|format(p.price) }}</td>
         <td>
-          <form style="display:inline" method="post" action="{{ url_for('cart_add', product_id=p.id) }}">
+          <form style="display:inline" method="post" action="{{ url_for('cart_add', product_id=p.ID) }}">
             <input type="number" name="quantity" value="1" min="1" style="width:60px"/>
             <button type="submit">Add to cart</button>
           </form>
